# FeltnerAI

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  justfile
crates/feltnerai-api-types/: Cargo.toml
crates/feltnerai-api-types/examples/: generate_ts.rs
crates/feltnerai-api-types/src/: lib.rs
crates/feltnerai-core/: Cargo.toml
crates/feltnerai-core/src/: config.rs  crypto.rs  db.rs  lib.rs  password.rs  validation.rs
crates/feltnerai-portal/: Cargo.toml  tauri.conf.json
crates/feltnerai-portal/capabilities/: default.json
crates/feltnerai-portal/icons/: icon.icns
crates/feltnerai-portal/src/: lib.rs  main.rs  projects.rs  tools.rs
crates/feltnerai-provider-openai/: Cargo.toml
crates/feltnerai-provider-openai/src/: lib.rs
crates/feltnerai-server/: Cargo.toml  build.rs
crates/feltnerai-server/icons/liquid-glass.icon/: icon.json
crates/feltnerai-server/src/: admin.rs  assets.rs  auth.rs  backup.rs  chats.rs  error.rs  lib.rs  lmstudio.rs  main.rs  platform.rs  public_auth.rs  state.rs  windows_tray.rs
crates/feltnerai-server/static/: index.html
crates/feltnerai-server/tests/: api.rs
crates/feltnerai-tray/: Cargo.toml  build.rs
crates/feltnerai-tray/src/: main.rs  tray.rs
docs/: api.md  deployment.md  development.md
frontend/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: App.tsx  PortalGate.tsx  contexts.tsx  dom.test.ts  dom.ts  main.tsx  portal.test.ts  portal.ts  styles.css
frontend/src/agent/: engine.ts  prompt.ts  tools.ts  types.ts
frontend/src/api/: client.test.ts  client.ts  generated.ts  openapi.json
frontend/src/components/: AppLayout.tsx  Markdown.tsx  common.tsx  feedback.tsx  ui.test.tsx  ui.tsx
frontend/src/components/assistant-ui/: markdown-text.tsx  thread.tsx  tool-fallback.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  sheet.tsx  sonner.tsx  switch.tsx  table.tsx  textarea.tsx  tooltip.tsx
frontend/src/pages/: ChangePassword.tsx  Chat.tsx  Code.tsx  Login.tsx  Settings.tsx  Setup.tsx
frontend/src/pages/admin/: Branding.tsx  LmStudio.tsx  Models.tsx  Providers.tsx  Server.tsx  Users.tsx
frontend/src/test/: setup.ts
migrations/: 0001_initial.sql  0002_user_theme.sql  0003_lmstudio.sql
scripts/: setup.ps1  setup.sh
