[workspace]
members = [
  "crates/feltnerai-api-types",
  "crates/feltnerai-core",
  "crates/feltnerai-provider-openai",
  "crates/feltnerai-server",
  "crates/feltnerai-tray",
  "crates/feltnerai-portal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/feltnerai/feltnerai"

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
argon2 = "0.5"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
directories = "6"
futures = "0.3"
hex = "0.4"
http = "1"
http-body-util = "0.1"
ignore = "0.4"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service"] }
mime_guess = "2"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
subtle = "2"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower = { version = "0.5", features = ["limit", "util"] }
tower-http = { version = "0.6", features = ["catch-panic", "compression-full", "cors", "limit", "request-id", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
ts-rs = { version = "11", features = ["chrono-impl", "uuid-impl"] }
url = { version = "2", features = ["serde"] }
utoipa = { version = "5", features = ["chrono", "uuid"] }
uuid = { version = "1", features = ["serde", "v7"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
zeroize = "1"
