[package]
name = "feltnerai-portal"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "feltnerai_portal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "feltnerai-portal"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
uuid.workspace = true

