[package]
name = "feltnerai-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "feltnerai-tray"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
tray-icon = "0.24"
webbrowser = "1.2"
winit = "0.30"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
